<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_Friendsimage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_avatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTvTitle"
        style="@style/StyleSemiBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart = "17dp"
        android:text="@string/jack"
        android:textColor="@color/colorGray5"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_Friendsimage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/txTvsubTitle"
        style="@style/StyleRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/id"
        android:textColor="@color/colorGray7"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_Friendsimage"
        app:layout_constraintTop_toBottomOf="@id/txtTvTitle"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/txTvlocation"
        style="@style/StyleRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/location"
        android:textSize="12sp"
        android:textColor="@color/colorGray7"
        app:layout_constraintStart_toEndOf="@id/iv_Friendsimage"
        app:layout_constraintTop_toBottomOf="@id/txTvsubTitle" />

    <Button
        android:id="@+id/unfriendBtn"
        style="@style/StyleRegular"
        android:layout_width="86dp"
        android:layout_height="34dp"
        android:background="@drawable/rectanglebutton"
        android:text="@string/unfriend"
        android:textColor="@color/colorGray5"
        android:paddingStart="2dp"
        android:textSize = "14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@id/txTvsubTitle"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
