<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="10dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/iv_image_places"
            android:layout_width="101dp"
            android:layout_height="90dp"
            android:scaleType="centerCrop"
            android:src="@android:drawable/sym_def_app_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"/>
        <TextView
            android:id="@+id/txTv_triomphe"
            style="@style/StyleSemiBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/arc_de_triomphe"
            android:textColor="@color/colorGray5"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_image_places"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1"/>
        <TextView
            android:id="@+id/txTvLocation"
            style="@style/StyleRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/location"
            android:textColor="@color/colorGray9"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/txTv_triomphe"
            app:layout_constraintTop_toBottomOf="@id/txTv_triomphe"/>
        <TextView
            android:id="@+id/txTv_two_friends"
            style="@style/StyleRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/two_friends_visited"
            android:textColor="@color/colorGray7"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/txTvLocation"
            app:layout_constraintTop_toBottomOf="@id/txTvLocation"/>
        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/colorGrayBorder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_image_places"
            app:layout_constraintTop_toBottomOf="@id/iv_image_places"/>
        <TextView
            style="@style/StyleRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:drawableStart="@drawable/briefcase"
            android:drawablePadding="2dp"
            android:text="@string/visited"
            android:textColor="@color/colorGray9"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view"/>
        <TextView
            android:id="@+id/txTv_80"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_like"
            android:drawablePadding="2dp"
            android:text="@string/_80"
            android:textColor="@color/colorGray10"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@id/iv_image_places"
            app:layout_constraintHorizontal_bias="0.12"
            app:layout_constraintStart_toStartOf="@id/iv_image_places"
            app:layout_constraintTop_toBottomOf="@id/iv_image_places"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_dislike"
            android:drawablePadding="2dp"
            android:text="@string/_20"
            android:textColor="@color/colorGray10"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@id/iv_image_places"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toEndOf="@id/txTv_80"
            app:layout_constraintTop_toBottomOf="@id/iv_image_places"/>



    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>