<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile_notification"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_avatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTvTitle"
        style="@style/StyleSemiBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/jack"
        android:textColor="@color/colorGray"
        android:textSize="14sp"
        android:maxLines="2"
        android:minLines="1"
        android:ems = "14"
        android:ellipsize="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_profile_notification"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/txTvLocation"
        style="@style/StyleRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/id"
        android:textColor="@color/colorGray"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_profile_notification"
        app:layout_constraintTop_toBottomOf="@id/txtTvTitle"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/txTvtime"
        style="@style/StyleRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/location"
        android:textColor="@color/colorGray2"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@id/iv_profile_notification"
        app:layout_constraintTop_toBottomOf="@id/txTvLocation" />




</androidx.constraintlayout.widget.ConstraintLayout>
