<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:clickable="true"
    android:background="@color/colorWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<ImageView
    android:id="@+id/iv_backbtn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginStart="16dp"
    android:src="@drawable/ic_backbuttonmaroon"
    app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txtv_Enter_emailaddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_email_resetpasword"
        android:textColor="@color/colorGray17"
        android:textSize="19sp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/iv_backbtn"
        android:layout_marginTop="56dp"
        app:layout_constraintStart_toEndOf="@id/iv_backbtn"
        android:ems="12"
        style="@style/StyleSemiBold"/>

    <TextView
        android:id="@+id/txtv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="16sp"
        android:fontFamily="@font/font_futuramediumbt"
        android:textColor="@color/colorGray5"
        app:layout_constraintTop_toBottomOf="@id/txtv_Enter_emailaddress"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="@id/txtv_Enter_emailaddress"/>
    <EditText
        android:id="@+id/editTxt_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        app:layout_constraintWidth_percent="0.73"
        app:layout_constraintTop_toBottomOf="@id/txtv_email"
        android:theme="@style/EditTextCustomLinecolor"
        app:layout_constraintStart_toStartOf="@id/txtv_email"/>
    <Button
        android:id="@+id/SubmitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_rectanglemarronbutton"
        app:layout_constraintTop_toBottomOf="@id/editTxt_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/submit"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>